# ieee-submission-round-2

./: .pre-commit-config.yaml  README.md  pyproject.toml
benches/: bench_stack.py
src/ieee_submission/: __main__.py  stack.py
tests/: test_stack.py
